# errorsystem-cmake

./: .clang-format  .gitignore  CMakeLists.txt
include/errorsystem/: abi.h  attribute.h  debug_only.h  error.h  expected.h  status.h
src/: status.cpp
test/: main.cpp
